--- a/css/main.css
+++ b/css/main.css
@@ -208,7 +208,7 @@ footer h4[lang=en], footer h4[lang=ar], footer h4[lang=ru] {
 /***********************************************
                 MEDIA QUERIES
 ***********************************************/
-@media all and (min-width: 700px) {
+@media only screen and (min-width: 700px) {
   header {
     width: 700px;
     margin: 0 auto;
@@ -276,7 +276,7 @@ footer h4[lang=en], footer h4[lang=ar], footer h4[lang=ru] {
     display: block; }
   footer h4[lang=de], footer h4[lang=en], footer h4[lang=ru] {
     display: none; } }
-@media all and (min-width: 900px) {
+@media only screen and (min-width: 900px) {
   header {
     width: 900px;
     margin: 0 auto; }
@@ -365,7 +365,7 @@ footer h4[lang=en], footer h4[lang=ar], footer h4[lang=ru] {
     display: block; }
   footer h4[lang=ru], footer h4[lang=ar], footer h4[lang=en] {
     display: none; } }
-@media all and (min-width: 1400px) {
+@media only screen and (min-width: 1400px) {
   header {
     width: 1400px;
     margin: 0 auto; }
